--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -50,6 +50,8 @@
 <!ENTITY Ctr_tabheightinfo	"Low values will cause glitches in maximized mode!">
 <!ENTITY Ctr_tabmaxwidth	"Maksimal-bredde:">
 <!ENTITY Ctr_tabminwidth	"Minimums-bredde:">
+<!ENTITY Ctr_tabclipwidth	"Clip-width:">
+<!ENTITY Ctr_tabclipwidthI	"Set 'clip width' to '1' manually!">
 <!ENTITY Ctr_tabwidthinfo	"Bredden på faneblade styres af TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"Bredden på faneblade styres af TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Værdier under 48px vil for det meste give fejl i grafikken!">
