--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -50,6 +50,8 @@
 <!ENTITY Ctr_tabheightinfo	"I valori bassi provocheranno anomalie nella finestra ingrandita!">
 <!ENTITY Ctr_tabmaxwidth	"Larghezza massima:">
 <!ENTITY Ctr_tabminwidth	"Larghezza minima:">
+<!ENTITY Ctr_tabclipwidth	"Clip-width:">
+<!ENTITY Ctr_tabclipwidthI	"Set 'clip width' to '1' manually!">
 <!ENTITY Ctr_tabwidthinfo	"La larghezza minima e massima delle schede è definita da TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"La larghezza minima e massima delle schede è definita da TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"I valori inferiori a 48px provocheranno anomalie nella maggior parte dei casi!">
