--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -50,6 +50,8 @@
 <!ENTITY Ctr_tabheightinfo	"Nizke vrednosti bodo v razpetem načinu povzročile napake!">
 <!ENTITY Ctr_tabmaxwidth	"Največja širina:">
 <!ENTITY Ctr_tabminwidth	"Najmanjša širina:">
+<!ENTITY Ctr_tabclipwidth	"Clip-width:">
+<!ENTITY Ctr_tabclipwidthI	"Set 'clip width' to '1' manually!">
 <!ENTITY Ctr_tabwidthinfo	"Širino zavihkov nadzira TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"Širino zavihkov nadzira TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Vrednosti pod 48 slikovnih točk bodo v večini premerov povzročile napake!">
