--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -50,8 +50,8 @@
 <!ENTITY Ctr_tabheightinfo	"较小的值在最大化模式下可能出现问题!">
 <!ENTITY Ctr_tabmaxwidth	"最大宽度:">
 <!ENTITY Ctr_tabminwidth	"最小宽度:">
-<!ENTITY Ctr_tabclipwidth	"Clip-width:">
-<!ENTITY Ctr_tabclipwidthI	"Set 'clip width' to '1' manually!">
+<!ENTITY Ctr_tabclipwidth	"裁剪宽度:">
+<!ENTITY Ctr_tabclipwidthI	"手工设置“裁剪宽度”为“1”!">
 <!ENTITY Ctr_tabwidthinfo	"标签页的最小宽度和最大宽度由 TabMixPlus 所控制">
 <!ENTITY Ctr_tabwidthinfo2	"标签页的最小宽度和最大宽度由 TabUtilities 所控制">
 <!ENTITY Ctr_tabwidthinfo3	"小于48px的值在多数情况下可能出现问题!">
@@ -270,7 +270,7 @@
 <!ENTITY Ctr_fx36prefs		"&brandShortName; 36+ 引入在标签页中显示选项设置。不选中此项以使用旧选项窗口。">
 <!ENTITY Ctr_fx38reader		"&brandShortName; 38+ 引入新的“阅读模式”。不选中此项以禁用它并从地址栏移除图标。">
 <!ENTITY Ctr_fx38pocket		"&brandShortName; 38.0.5+ 引入“Pocket”功能。不选中此项以禁用它并从地址栏移除图标。">
-<!ENTITY Ctr_fx38pocket2	"Note: Moving 'Pocket'-button to 'customizing palette' before disabling this preference also removes 'Pocket' entries in bookmarks and reader menus.">
+<!ENTITY Ctr_fx38pocket2	"注意: 在禁用该选项前移动“Pocket”按钮到 “定制面板” 同时会从书签和阅读菜单移除“Pocket”">
 <!ENTITY Ctr_e_omtc			"OMTC / 卡死标签页的问题">
 <!ENTITY Ctr_e_searchui		"搜索栏外观">
 <!ENTITY Ctr_e_loop			"呼叫与会话">
