fixed translation for Ctr_chevronfix

--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -238,7 +238,7 @@
 <!ENTITY Ctr_nonavtbborder	"Верхние панели: убрать границы панелей">
 <!ENTITY Ctr_hidesbclose	"Боковые панели: скрыть кнопку «Закрыть» на боковой панели">
 <!ENTITY Ctr_notextshadow	"Панели: скрыть тень от текста на панели инструментов и на вкладках">
-<!ENTITY Ctr_chevronfix		"Панель навигации: скрыть двойную стрелку («шеврон») в конце панели">
+<!ENTITY Ctr_chevronfix		"Панель навигации: скрыть двойную стрелку («Другие инструменты») в конце панели">
 <!ENTITY Ctr_tbsep_winc		"Верхние панели: дополнительные разделители панелей">
 
 <!ENTITY Ctr_closeabarbut	"Скрыть кнопку закрытия">
